lab1/Test/L1-A-5-12.output
Error Type A at Line 1
Error Type A at Line 2
Error Type B at Line 5
Error Type A at Line 7
Error Type A at Line 14
Error Type B at Line 21
Error Type A at Line 44
