lab1/Test/L1-A-5-12.cmm
struct aDgBo6LcbYC ^;
int &;
float i0k0hpAnhBs6SP4YAeE ( float HX9B7ZSSFwQ [ 1828157255 
  ] [ 2055846573 ] , struct QcOfrfMf4 D2BmKa_Vl_rXS 
  [ 1494173138 ] [ 853082611 ] [ 2077480028 ] 115539508 
  ] [ 512104984 ] ) {
  struct UaUMQlkc n3N1k6850ObMIz4ng = DEPELz ( \) 
    . a6zvSU8fnX - uu > iyN7whV22B == cghHNJx2rtIYvQxD 
    < tDfJXB8GZJYTR < NL6bXHZJB2qV8SHdh > TwBUyL != c 
    >= gvd4mKYX6dUtiBZfAg && FZqEBhAe && VJ3Lxs7xfUI8bs 
    && fKTP15OgkEzY && GU_BzaXWl3sXh || cp2snbpr2uPd || 
    n5SmyznjIOoz || aymRF9 , zkZxfzCUcYlBh3iDEGpz [ 1316412445 
    ] [ 1838364263 ] [ 1431856540 ] = bZ6 ;
  struct tIsIHVGqfcG5KhPOvCA jqYZasrc3TCu ~;
  lCABxSwKW4RR9F8 ( ! - KEF = Uh5f_tX2KIJeu3G ) / 
    ! - yGZxCxnojCXqh8 * X4guZP60JTy ( ) . AiSm . TIkz6gNncS8L_Z 
    / - ! P0oBXwDQbcXXzx4 * 1101108286 * ! kLilslzjE * 
    - PQ3c0EMgfRt6j ( g3E ) * ! ! uHHqj_Dw * ! ! pNMsOg 
    / ! an9sSDkrQNQ * 2089446811.1270238923 * ! RTfFE3KpDyjLtJbRq 
    ( ) >= ! - k2o4Q < ! - _u0wXflk4Y0fWMZ6h4 + zTnaWTkIgHwFtRbHV 
    >= ! ! D * pje_lX * sI * + endbBJlCUx588dVYZb2 <= 
    ! - p_YteFfeuVBYLW / D8SyvjoImdnl * ypUX90SxG0 * EdDRI 
    - vsjzE2nd - mxCqHV98egsXj5yRj9 - IK8 + FEvjtTcQOKqOruMyRY 
    <= - - ygaizo2fawoTCS2E + f - VhueA - ac == kFJKNofmG9BtoUTZGj 
    ( LC6KxE9DhZlfpv ) . n6p_ov + rClCike + yIuhLyEewY4IAiP 
    + EFGR9Oi9MtC + ko47EfewF9w0mPpjA - Um5ngHiCa9m + 
    y1qni4A79ynvz6 - XFd + msBIa3N7w + ellqZ8HvtPp1f9rvd 
    && ! Rk4LCXCqdFk8I7LVDf6 == zPpIEmb1c5 >= qn1hBdf3K0yqu210te5 
    && - - hnfMb4XlW_7E * a72om7FHWHS * ci0Znm3fYVJ5 * 
    nZelUa8e * n4M2GjSxEG81q / dAeRY056ZxaLHkrp / u / 
    YI_3 - _XrjaBeZmlTT4h1 > ch4IWzj7m8WtdsZaUf7M <= cWok 
    >= nHMmYZ0ifHI9Et814x6 != P7YbAOAhFgZwYCmNNj >= X9GkHB0IrnPvt 
    < w3SU0SO && C8K7Ra2zjffdgNrzk [ pKouJoDrqetc9b4c 
    ] / yLcZ5V3fiQgJBEtTD5S / Bt9ZZ2tt9b * gu9 * T3VcCvXuShkAXdA 
    + p9iH3 + cM4 == aprBOuLLX4zu1VS3a >= Vsz2 && ! ! 
    Pk9FwZI7xzestCyJs / fP1phshPah * EJ1g64Ag * _bfDD1KTcT4vdmUNCm 
    * EovutyKqDpQETYFydumx / vdCXh - er1_ui - rklffs8ePAbG 
    + bb2Yd0 + P1U9lj0kftg + ygk7h3b - je8P + G8Pla || 
    - T99lhfbocWfsJaEsc ( ) . NoUe0l1TGL7WVeRp * yGOfvtrNkg0g 
    / IC_2xUqp / n828Yvdf8 * L1Sns / V + X5gTHTo55A > 
    VidTZ == CEFlfB > bnbJC && dGO7cLJ6zWTByFnZZfO && 
    PSMwqZx ;
}
#